enhancement of key tables except categories

--- a/UJCSystem/ITJakub.Web.Hub/Localization/KeyTable/KeyTable.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/KeyTable/KeyTable.cs-CZ.json
@@ -67,8 +67,8 @@
     "CategoryRenameError": "Kategorie nebyla přejmenována",
     "CategoryInfoMessage": "Prosím vyberte kategorii",
     "CategoryConfirmMessage": "Opravdu chcete odstranit tuto kategorii?",
-    "CategoryDeleteSuccess": "Odstranění kategorie bylo úspěšné",
-    "CategoryDeleteError": "Odstranění kategorie nebylo úspěšné",
+    "CategoryRemoveSuccess": "Odstranění kategorie bylo úspěšné",
+    "CategoryRemoveError": "Odstranění kategorie nebylo úspěšné",
 
     "GenreInputHeadline": "Žánr",
     "GenreNameInput": "Název žánru:",
@@ -78,8 +78,8 @@
     "GenreRenameSuccess": "Žánr byl přejmenován",
     "GenreRenameError": "Žánr nebyl přejmenován",
     "GenreConfirmMessage": "Opravdu chcete odstranit tento žánr?",
-    "GenreDeleteSuccess": "Odstranění žánru bylo úspěšné",
-    "GenreDeleteError": "Odstranění žánru nebylo úspěšné",
+    "GenreRemoveSuccess": "Odstranění žánru bylo úspěšné",
+    "GenreRemoveError": "Odstranění žánru nebylo úspěšné",
     "GenreInfoMessage": "Prosím vyberte žánr",
 
     "KeywordInputHeadline": "Klíčové slovo",
@@ -90,8 +90,8 @@
     "KeywordRenameSuccess": "Klíčové slovo bylo přejmenováno",
     "KeywordRenameError": "Klíčové slovo nebylo přejmenováno",
     "KeywordConfirmMessage": "Opravdu chcete odstranit toto klíčové slovo?",
-    "KeywordDeleteSuccess": "Odstranění klíčového slova bylo úspěšné",
-    "KeywordDeleteError": "Odstranění klíčového slova nebylo úspěšné",
+    "KeywordRemoveSuccess": "Odstranění klíčového slova bylo úspěšné",
+    "KeywordRemoveError": "Odstranění klíčového slova nebylo úspěšné",
     "KeywordInfoMessage": "Prosím vyberte klíčové slovo",
 
     "KindInputHeadline": "Druh",
@@ -102,8 +102,8 @@
     "KindRenameSuccess": "Druh byl přejmenován",
     "KindRenameError": "Druh nebyl přejmenován",
     "KindConfirmMessage": "Opravdu chcete odstranit tento druh?",
-    "KindDeleteSuccess": "Odstranění druhu bylo úspěšné",
-    "KindDeleteError": "Odstranění druhu nebylo úspěšné",
+    "KindRemoveSuccess": "Odstranění druhu bylo úspěšné",
+    "KindRemoveError": "Odstranění druhu nebylo úspěšné",
     "KindInfoMessage": "Prosím vyberte druh",
 
     "LitOriginInputHeadline": "Literární originál",
@@ -114,20 +114,21 @@
     "LitOriginRenameSuccess": "Literární originál byl přejmenován",
     "LitOriginRenameError": "Literární originál nebyl přejmenován",
     "LitOriginConfirmMessage": "Opravdu chcete odstranit tento literární originál?",
-    "LitOriginDeleteSuccess": "Odstranění literárního originálu bylo úspěšné",
-    "LitOriginDeleteError": "Odstranění literárního originálu nebylo úspěšné",
+    "LitOriginRemoveSuccess": "Odstranění literárního originálu bylo úspěšné",
+    "LitOriginRemoveError": "Odstranění literárního originálu nebylo úspěšné",
     "LitOriginInfoMessage": "Prosím vyberte literární originál",
 
     "OrigAuthInputHeadline": "Originální autor",
-    "OrigAuthNameInput": "Originální autor:",
+    "OrigAuthNameInput": "Jméno:",
+    "OrigAuthSurnameInput": "Příjmení:",
     "OrigAuthWarningMessage": "Nic nebylo zadáno",
     "OrigAuthCreateSuccess": "Originální autor byl vytvořen",
     "OrigAuthCreateError": "Originální autor nebyl vytvořen",
     "OrigAuthRenameSuccess": "Originální autor byl přejmenován",
-    "OrigAuthRenameError": "Originální autornebyl přejmenován",
+    "OrigAuthRenameError": "Originální autor nebyl přejmenován",
     "OrigAuthConfirmMessage": "Opravdu chcete odstranit tohoto originálního autora?",
-    "OrigAuthDeleteSuccess": "Odstranění originálního autora bylo úspěšné",
-    "OrigAuthDeleteError": "Odstranění originálního autora nebylo úspěšné",
+    "OrigAuthRemoveSuccess": "Odstranění originálního autora bylo úspěšné",
+    "OrigAuthRemoveError": "Odstranění originálního autora nebylo úspěšné",
     "OrigAuthInfoMessage": "Prosím vyberte originálního autora",
 
     "RespPerInputHeadline": "Odpovědná osoba",
@@ -139,8 +140,8 @@
     "RespPerRenameSuccess": "Opodvědná osoba byla přejmenována",
     "RespPerRenameError": "Opodvědná osoba nebyla přejmenována",
     "RespPerConfirmMessage": "Opravdu chcete odstranit tuto odpovědnou osobu?",
-    "RespPerDeleteSuccess": "Odstranění odpovědné osoby bylo úspěšné",
-    "RespPerDeleteError": "Odstranění odpovědné osoby bylo úspěšné",
+    "RespPerRemoveSuccess": "Odstranění odpovědné osoby bylo úspěšné",
+    "RespPerRemoveError": "Odstranění odpovědné osoby bylo úspěšné",
     "RespPerInfoMessage": "Prosím vyberte odpovědnou osobu",
 
     "RespPerTypeInputHeadline": "Typ odpovědné osoby",
@@ -152,8 +153,8 @@
     "RespPerTypeRenameSuccess": "Typ odpovědné osoby byl přejmenován",
     "RespPerTypeRenameError": "Typ odpovědné osoby nebyl přejmenován",
     "RespPerTypeConfirmMessage": "Opravdu chcete odstranit tento typ odpovědné osoby?",
-    "RespPerTypeDeleteSuccess": "Odstranění typu odpovědné osoby bylo úspěšné",
-    "RespPerTypeDeleteError": "Odstranění typu odpovědné osoby nebylo úspěšné",
+    "RespPerTypeRemoveSuccess": "Odstranění typu odpovědné osoby bylo úspěšné",
+    "RespPerTypeRemoveError": "Odstranění typu odpovědné osoby nebylo úspěšné",
     "RespPerTypeInfoMessage": "Prosím vyberte typ odpovědné osoby"
   }
 }
