--- a/UJCSystem/ITJakub.Web.Hub/Localization/Favorite/Favorite.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Favorite/Favorite.cs-CZ.json
@@ -63,6 +63,7 @@
     "Books": "Knihy",
     "Category": "Kategorie",
     "PageBookmark": "Záložky na stránky",
-    "Query": "Vyhledávací dotazy"
+    "Query": "Vyhledávací dotazy",
+    "DictionaryHeadwords": "Slovníková hesla"
   }
 }
