Add missing localization, improve localization

--- a/UJCSystem/ITJakub.Web.Hub/Localization/KeyTable/KeyTable.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/KeyTable/KeyTable.cs-CZ.json
@@ -15,7 +15,7 @@
     "LiteraryOriginal": "Předloha",
     "OriginalAuthor": "Autor",
     "Keyword": "Klíčové slovo",
-    
+
     "Create": "Vytvořit",
     "Change": "Přejmenovat",
     "Delete": "Odstranit",
@@ -90,7 +90,7 @@
     "KeywordRemoveError": "Odstranění klíčového slova nebylo úspěšné",
     "KeywordInfoMessage": "Prosím vyberte klíčové slovo",
 
-    "KindInputHeadline": "Druh",
+    "KindInputHeadline": "Literární druh",
     "KindNameInput": "Název druhu:",
     "KindWarningMessage": "Nic nebylo zadáno",
     "KindCreateSuccess": "Nový druh byl vytvořen",
@@ -102,30 +102,30 @@
     "KindRemoveError": "Odstranění druhu nebylo úspěšné",
     "KindInfoMessage": "Prosím vyberte druh",
 
-    "LitOriginInputHeadline": "Literární originál",
-    "LitOriginNameInput": "Název literárního originálu:",
+    "LitOriginInputHeadline": "Literární předloha",
+    "LitOriginNameInput": "Název literární předlohy:",
     "LitOriginWarningMessage": "Nic nebylo zadáno",
-    "LitOriginCreateSuccess": "Nový literární originál byl vytvořen",
-    "LitOriginCreateError": "Nový literární originál nebyl vytvořen",
-    "LitOriginRenameSuccess": "Literární originál byl přejmenován",
-    "LitOriginRenameError": "Literární originál nebyl přejmenován",
-    "LitOriginConfirmMessage": "Opravdu chcete odstranit tento literární originál?",
-    "LitOriginRemoveSuccess": "Odstranění literárního originálu bylo úspěšné",
-    "LitOriginRemoveError": "Odstranění literárního originálu nebylo úspěšné",
-    "LitOriginInfoMessage": "Prosím vyberte literární originál",
+    "LitOriginCreateSuccess": "Nová literární předloha byla vytvořena",
+    "LitOriginCreateError": "Nová literární předloha nebyla vytvořena",
+    "LitOriginRenameSuccess": "Literární předloha byla přejmenována",
+    "LitOriginRenameError": "Literární předloha nebyla přejmenována",
+    "LitOriginConfirmMessage": "Opravdu chcete odstranit tuto literární předlohu?",
+    "LitOriginRemoveSuccess": "Odstranění literární předlohy bylo úspěšné",
+    "LitOriginRemoveError": "Odstranění literární předlohy nebylo úspěšné",
+    "LitOriginInfoMessage": "Prosím vyberte literární předlohu",
 
-    "OrigAuthInputHeadline": "Originální autor",
+    "OrigAuthInputHeadline": "Autor",
     "OrigAuthNameInput": "Jméno:",
     "OrigAuthSurnameInput": "Příjmení:",
     "OrigAuthWarningMessage": "Nic nebylo zadáno",
-    "OrigAuthCreateSuccess": "Originální autor byl vytvořen",
-    "OrigAuthCreateError": "Originální autor nebyl vytvořen",
-    "OrigAuthRenameSuccess": "Originální autor byl přejmenován",
-    "OrigAuthRenameError": "Originální autor nebyl přejmenován",
-    "OrigAuthConfirmMessage": "Opravdu chcete odstranit tohoto originálního autora?",
-    "OrigAuthRemoveSuccess": "Odstranění originálního autora bylo úspěšné",
-    "OrigAuthRemoveError": "Odstranění originálního autora nebylo úspěšné",
-    "OrigAuthInfoMessage": "Prosím vyberte originálního autora",
+    "OrigAuthCreateSuccess": "Autor byl vytvořen",
+    "OrigAuthCreateError": "Autor nebyl vytvořen",
+    "OrigAuthRenameSuccess": "Autor byl přejmenován",
+    "OrigAuthRenameError": "Autor nebyl přejmenován",
+    "OrigAuthConfirmMessage": "Opravdu chcete odstranit tohoto autora?",
+    "OrigAuthRemoveSuccess": "Odstranění autora bylo úspěšné",
+    "OrigAuthRemoveError": "Odstranění autora nebylo úspěšné",
+    "OrigAuthInfoMessage": "Prosím vyberte autora",
 
     "RespPerInputHeadline": "Odpovědná osoba",
     "RespPerNameInput": "Jméno:",
